# KhaaoGPT

./: .gitignore  KhaoGPT_Blueprint.docx  README.md  blueprint_extracted.txt
backend/: auth.py  config.py  database.py  main.py  pyproject.toml  redis_client.py  requirements.txt  schemas.py  vercel.json
backend/api/: index.py
backend/data_pipeline/kaggle_data/: test.json
backend/data_pipeline/nlp/: taste_extractor.py
backend/data_pipeline/scrapers/: dish_generator.py  err.txt  err_utf8.txt  google_places_seeder.py  kaggle_seeder.py  osm_places_seeder.py
backend/models/: __init__.py  community_submission.py  dish.py  meal_rating.py  order_click.py  restaurant.py  taste_profile.py  user.py
backend/routers/: __init__.py  auth_router.py  chat.py  community.py  ratings.py  restaurants.py  taste_dna.py
backend/services/: community_service.py  first_bite.py  intent_parser.py  order_bridge.py  taste_engine.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/src/: App.jsx  api.js  index.css
frontend/src/components/: Navbar.jsx  RecommendationCard.jsx
frontend/src/pages/: Admin.jsx  Chat.jsx  CommunitySubmit.jsx  Home.jsx  Login.jsx  Profile.jsx  Quiz.jsx  Register.jsx
