[project]
name = "khaogpt-backend"
version = "0.1.0"
description = "Taste-intelligent food discovery for Delhi NCR"
dependencies = [
    "fastapi==0.115.0",
    "sqlalchemy==2.0.30",
    "asyncpg==0.29.0",
    "psycopg2-binary==2.9.9",
    "python-jose[cryptography]==3.3.0",
    "passlib[bcrypt]==1.7.4",
    "python-dotenv==1.0.1",
    "python-multipart==0.0.9",
    "pydantic[email]==2.9.0",
    "httpx==0.27.0",
    "redis==5.0.8",
    "cloudinary==1.41.0",
    "pydantic-settings==2.5.2",
    "uvicorn==0.30.0",
]

[tool.uv]
managed = true
package = false
